--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,8 +30,11 @@ jobs:
         with:
           static_site_generator: next
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Build with Next.js 🏗️
-        run: npx next build
+        run: npm run build
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
