--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
         uses: ./.github/workflows/setup-node
+        with:
+          node-version: "22"
 
       - name: Setup Pages ⚙️
         uses: actions/configure-pages@v4
@@ -38,6 +40,9 @@ jobs:
 
       - name: Build with Next.js 🏗️
         run: npm run build
+
+      - name: List build directory contents 📂
+        run: ls -la
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
