feat: autogenerate file system file from folder structure

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Prebuild ⚙️
+        run: npm run prebuild
+
       - name: Build with Next.js 🏗️
         run: npm run build
 
